<resources>
    <string name="app_name">droidconKE</string>
    <string name="title_home">Info</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_map">Venue</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="session_title">Firebase Remote config</string>
    <string name="session_separator">/</string>
    <string name="session_time">1 hour</string>
    <string name="session_room">6th Floor,Senteu Plaza</string>
    <string name="session_category">Firebase</string>
    <string name="agenda_label">Agenda</string>
    <string name="agenda_time">7:00 AM - 9:30 AM</string>
    <string name="title_activity_session_view" />
    <string name="large_text">
        "Material is the metaphor"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts."

    </string>
    <string name="action_settings">Settings</string>
    <string name="sessionview_time">Thur,August 8,11:30 AM - 12:45 PM</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_map">Map</string>
    <string name="play_text"><![CDATA[Android & Play]]></string>
    <string name="location"><![CDATA[Location & Maps]]></string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="welcome_title">
        First Sub-Saharan\n
        Android Focused\n
        Developer conference
    </string>
    <string name="welcome_dates">
        August 8- 9,\n
        2019 Senteu Plaza,Nairobi
    </string>
    <string name="welcome_build">Build your own schedule</string>
    <string name="welcome_build_description">
        Build your custom droidconKE experience\n
        and get notified if you are an\n
        attendee
    </string>
    <string name="welcome_sync">Get notified </string>
    <string name="welcome_sync_description">
        Never miss a session as we \n
        will notify you before the sessionsModel start</string>
    <string name="schedule_title">Schedule</string>
    <string name="info_label">Info</string>
    <string name="map_label">Map</string>
    <string name="settings_east_african_time">Events in East African Zone</string>
    <string name="settings_enable_notifications">Enable notifications</string>
    <string name="settings_send_statistics">Send anonymous usage statistics</string>
    <string name="about">About .droidconKE</string>
    <string name="organizers">Organisers</string>
    <string name="sponsors">Sponsors</string>
    <string name="open_source_licences">Open source licenses</string>
    <string name="built_with">Built with</string>
    <string name="material_components">Material Components</string>
    <string name="travel_shuttle_info_title">Driving Directions</string>
    <string name="travel_public_transportation_info_title">Public Transportation</string>
    <string name="expanded">Expanded</string>
    <string name="collapsed">Collapsed</string>
    <string name="travel_carpool_parking_info_title">Parking</string>
    <string name="travel_ride_sharing_info_title">Ride Sharing</string>
    <string name="travel_biking_info_title">Biking</string>
    <string name="shuttle_info">Find directions on Google Maps or your location to IHub,Senteu Plaza,Nairobi Kenya</string>
    <string name="public_transportation_info">Public transit does not go directly to iHub. Make sure you search the directions on Google Map properly</string>
    <string name="car_pooling_parking_info">Parking is very limited and available only in IHub designated slots located in Senteu Plaza. If you plan to drive,we recommend carpooling with other attendees as preferred parking spaces will be available for cars containing two or more people</string>
    <string name="biking_info"> Complementary bike parking will be available at Senteu Plaza. Security officers
    will provide secure valet parking for your bicycle from 7 am until the event ends each day</string>
    <string name="ride_sharing_info"> You can share rides with your colleagues to and from the event using either of the famous taxi hailing services</string>
    <string name="wifi_ssid">"droidconKE"</string>
    <string name="wifi_password">droidconKE19 </string>
    <string name="title_activity_authenticate_user">AuthenticateUser</string>
    <string name="action_share">Share</string>
    <string name="action_map">Map</string>
    <string name="droidconke_site">https://droidcon.co.ke</string>
    <string name="droidcoke_hashtag">#droidconKE</string>
    <string name="faqs_link">https://droidcon.co.ke</string>
    <string name="terms_of_service_link">https://droidcon.co.ke</string>
    <string name="privacy_policy_link">https://droidcon.co.ke</string>
    <string name="about_licenses">Open Source Licenses</string>
    <string name="ok">OK</string>
    <string name="customize_schedule">Customize your schedule</string>
    <string name="star_event">Add to your isStarred events</string>
    <string name="see_event_map">See session venue</string>
    <string name="sign_in_to_customize">Sign in to customize \nyour schedule</string>
    <string name="sign_in_descrption">Sign in to save events and get notifications. Actions will be synced from your account across app and site</string>
    <string name="not_now">Not now</string>
    <string name="driving_directions_key" translatable="false">driving_directions</string>
    <string name="public_transportation_key" translatable="false">public_transportation</string>
    <string name="biking_key" translatable="false">biking</string>
    <string name="ride_sharing_key" translatable="false">ride_sharing</string>
    <string name="car_pooling_key" translatable="false">car_pooling_parking_info</string>
    <string name="wifi_ssid_key" translatable="false">wifi_ssid</string>
    <string name="wifi_password_key" translatable="false">wifi_password</string>
    <string name="droidconke_site_key" translatable="false">droidconke_site</string>
    <string name="droidconke_hashtag_ke" translatable="false">droidconke_hashtag</string>
    <string name="faqs_link_key" translatable="false">faqs_link</string>
    <string name="terms_of_service_link_key" translatable="false">terms_of_service_link</string>
    <string name="privacy_policy_link_key" translatable="false">privacy_policy_link</string>
    <string name="copyright">© 2019 droidconKE</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="event_description">
        In Person attendees can star sessions. A material metaphor is the unifying theory of a rationalized space
        and a system of motion.The material is grounded in tactile reality, inspired by the study of paper and ink, yet</string>
    <string name="speaker_name">John Doe</string>
    <string name="speaker_company">Google</string>
    <string name="ihub">IHub</string>
    <string name="senteu_plaza">6th Floor, Senteu Plaza</string>
    <string name="room_details">Room Details</string>
    <string name="room_description">\"Surfaces and edges of the material provide visual cues that are grounded in reality. The \"         \"use of familiar tactile attributes helps users quickly understand affordances. Yet the \"         \"flexibility of the material creates new affordances that supercede those in the physical \"         \"world, without breaking the rules of physics.\\n\"</string>
    <string name="welcome_date">August 8th - 9th \n 2019</string>
    <string name="welcome_year">2019</string>
    <string name="welcome_location">iHub Nairobi</string>
    <string name="speakers">Speakers</string>
    <string name="filter_details">Filters</string>
    <string name="about_detail_title">Company A</string>
    <string name="title_activity_about_details">AboutDetails</string>
    <string name="session_time_am">AM</string>
    <string name="time_session">7:20</string>
    <string name="session_hour">10:00 AM - 11:00 AM</string>
    <string name="starred_desc">Event added to your starred items</string>
    <string name="unstarred_desc">Event removed from starred items</string>
    <string name="undo">UNDO</string>
    <string name="day_one_label">Aug 8</string>
    <string name="day_two_label">Aug 9</string>
    <string name="time_in_am">07:45</string>
    <string name="am_label">AM</string>
    <string name="title_activity_feed_back">FeedBack</string>
    <string name="session_feedback">Kindly give us feedback about the session to better it.</string>
    <string name="hintSessionFeedback">Session feedback</string>
    <string name="session_feedback_title">Session Title</string>
    <string name="action_feedback">Event Feedback</string>
    <string name="title_activity_event_feedback">EventFeedback</string>
    <string name="event_feedback">Kindly give us your general view of the event as a whole as well as any ideas to improve on it.</string>
    <string name="hintEventFeedback">Event feedback</string>
    <string name="schedule_label">Schedule</string>
    <string name="event_website">www.droidcon.co.ke</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_sessions">Home</string>
    <string name="menu_agenda">Gallery</string>
    <string name="menu_announcements">Slideshow</string>
    <string name="menu_map">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_info">Send</string>
    <string name="announcements_label">Announcements</string>
    <string name="event_types">Event types</string>
    <string name="session_detail_speaker" translatable="false">Speaker</string>
    <string name="session_description_favorite_image" translatable="false">favorite image</string>
    <string name="session_go_to_feedback">Go to Feedback</string>
    <string name="speaker_label" translatable="false">Speaker</string>
    <string name="session_description_time_image" translatable="false">time image</string>
    <string name="session_detail_intended_audience">Intended Audience</string>
    <string name="session_detail_tag">Tags</string>
    <string name="session_detail_resource">Resources</string>
    <string name="session_detail_resource_video">Video</string>
    <string name="session_detail_resource_slide">Slides</string>
    <string name="session_bottom_appbar_behavior" translatable="false">droiddevelopers254.droidconke.ui.widget.SessionBottomAppBarBehavior</string>
    <string name="session_audience">beginner session</string>
    <string name="session_details_label">Session Details</string>
    <string name="session_feed_back_label">Feedback</string>
    <string name="session_time_in_am_pm">9.00 AM</string>
    <string name="session_room_name">Main Stage</string>
    <string name="agenda_image_description">Agenda Image</string>
</resources>