<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/scheduleFragment">

    <fragment
        android:id="@+id/scheduleFragment"
        android:name="droiddevelopers254.droidconke.ui.schedule.ScheduleFragment"
        android:label="@string/schedule_label"
        tools:layout="@layout/fragment_schedule" />
    <fragment
        android:id="@+id/agendaFragment"
        android:name="droiddevelopers254.droidconke.ui.agenda.AgendaFragment"
        android:label="@string/agenda_label"
        tools:layout="@layout/fragment_agenda"/>
    <fragment
        android:id="@+id/infoFragment"
        android:name="droiddevelopers254.droidconke.ui.info.InfoFragment"
        android:label="@string/info_label"
        tools:layout="@layout/fragment_info"/>
    <fragment
        android:id="@+id/mapFragment"
        android:name="droiddevelopers254.droidconke.ui.venuemap.MapFragment"
        android:label="@string/map_label"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/announcementFragment"
        android:name="droiddevelopers254.droidconke.ui.announcements.AnnouncementFragment"
        android:label="@string/announcements_label"
        tools:layout="@layout/fragment_announcements"/>
</navigation>