<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarStyle="insideOverlay"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/list_divider"
        android:orientation="vertical"
        android:paddingTop="@dimen/fab_margin"
        android:showDividers="middle">

        <droiddevelopers254.droidconke.ui.CollapsibleCard
            android:id="@+id/shuttleInfoCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardTitle="@string/travel_shuttle_info_title" />

        <droiddevelopers254.droidconke.ui.CollapsibleCard
            android:id="@+id/publicTransportationCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardTitle="@string/travel_public_transportation_info_title" />

        <droiddevelopers254.droidconke.ui.CollapsibleCard
            android:id="@+id/rideSharingCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardTitle="@string/travel_ride_sharing_info_title" />

        <droiddevelopers254.droidconke.ui.CollapsibleCard
            android:id="@+id/carpoolingParkingCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardTitle="@string/travel_carpool_parking_info_title" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
