<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.feedback.SessionFeedBackActivity"
    tools:showIn="@layout/activity_session_feed_back">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="5dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:text="@string/session_feedback"
            android:layout_height="wrap_content" />


        <ProgressBar
            android:id="@+id/loginProgressBarFeedBack"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:text="@string/session_feedback_title"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/txtSessionFeedbackTitle"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorBlack"
            tools:text="The session title comes here"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:id="@+id/txtSessionUserFeedback"
            android:hint="@string/hintSessionFeedback"
            android:layout_height="wrap_content" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>