<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:background="@drawable/rounded_dialog"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/fab_margin"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/sign_in_to_customize"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="@dimen/fab_margin"
            android:text="@string/sign_in_descrption"
            android:textSize="18sp"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="end"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/fab_margin"
                android:id="@+id/cancelText"
                android:text="@string/not_now"
                android:textSize="18sp"
                android:textColor="@color/colorFavourite"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="100dp"
                android:id="@+id/signInBtn"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_toEndOf="@id/cancelText"
                android:text="Sign in"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:background="@drawable/round_button"
                android:layout_height="wrap_content" />
        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>