<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="@dimen/medium_margin"
    android:layout_marginEnd="@dimen/medium_margin"
    android:layout_marginStart="@dimen/medium_margin"
    >

    <com.google.android.material.card.MaterialCardView
        style="?attr/materialCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="@dimen/fab_margin"
        app:cardCornerRadius="@dimen/card_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/speakerLinear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/profile"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speaker_name"
                        android:textSize="@dimen/text_size_extra_small"
                        android:layout_marginTop="@dimen/small_margin"
                        android:textColor="@color/colorBlack"/>

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/session_audience"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorDroidBug"
                    android:paddingStart="@dimen/medium_margin"
                    android:paddingEnd="@dimen/medium_margin"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/sessionTitleText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/session_title"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_small"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin">

                <TextView
                    android:id="@+id/sessionInAmPmText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/session_time_in_am_pm"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_small"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/medium_margin"/>

                <TextView
                    android:id="@+id/timeSeparatorText"
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:background="@drawable/circle_black_outline"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_toEndOf="@id/sessionInAmPmText"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginEnd="@dimen/medium_margin"/>

                <TextView
                    android:id="@+id/sessionRoomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/session_room_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_small"
                    android:layout_toEndOf="@id/timeSeparatorText"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/medium_margin"/>

            </RelativeLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>