<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    android:scrollbarStyle="insideOverlay"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/fab_margin"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                style="@style/CollapsibleCardTitle"
                android:text="@string/settings_east_african_time"
                android:layout_height="wrap_content" />
            <Switch
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                style="@style/CollapsibleCardTitle"
                android:text="@string/settings_enable_notifications"
                android:layout_height="wrap_content" />
            <Switch
                android:layout_width="wrap_content"
                android:checked="true"
                android:layout_alignParentEnd="true"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                style="@style/CollapsibleCardTitle"
                android:text="@string/settings_send_statistics"
                android:layout_height="wrap_content" />
            <Switch
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>